fixed new scrollbar

--- a/src/Rooms.scss
+++ b/src/Rooms.scss
@@ -45,25 +45,29 @@ $light-brown : #F8B363;
     // background-color: green;
     display: flex;
     justify-content: right;
-    overflow: scroll;
     flex-direction: column; /* Stack the child components vertically */
     overflow-y: auto; /* Enable vertical scrolling for overflow content */
 }
    
 
 .room-section::-webkit-scrollbar {
-    width: 15px;
-    height: 100%;
-    background-color: green;
+    width: 25px;
     border-radius: 30px;
 }
 
 .room-section::-webkit-scrollbar-thumb {
-    width: 25px;
     height: 45px;
     background-color: white;
     border-radius: 30px;
 }
+
+.room-section::-webkit-scrollbar-track {
+    background: rgba(255,255,255, 0.25);
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    background-clip: padding-box;
+    border-radius: 10px;
+  }
 
 // scroll bar---------***--*-------
 
